added example server the correct way + bat file

--- a/cpp2_machiavelli/cpp2_machiavelli.vcxproj
+++ b/cpp2_machiavelli/cpp2_machiavelli.vcxproj
@@ -115,19 +115,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\Downloads\machiavelli\CircularBuffer.h" />
-    <ClInclude Include="..\..\..\..\Downloads\machiavelli\ClientCommand.h" />
-    <ClInclude Include="..\..\..\..\Downloads\machiavelli\ClientInfo.h" />
-    <ClInclude Include="..\..\..\..\Downloads\machiavelli\Player.h" />
-    <ClInclude Include="..\..\..\..\Downloads\machiavelli\Socket.h" />
-    <ClInclude Include="..\..\..\..\Downloads\machiavelli\Sync_queue.h" />
-    <ClInclude Include="..\..\..\..\Downloads\machiavelli\throw.h" />
+    <ClInclude Include="CircularBuffer.h" />
+    <ClInclude Include="ClientCommand.h" />
+    <ClInclude Include="ClientInfo.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Socket.h" />
+    <ClInclude Include="Sync_queue.h" />
+    <ClInclude Include="throw.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Downloads\machiavelli\main.cpp" />
-    <ClCompile Include="..\..\..\..\Downloads\machiavelli\Player.cpp" />
-    <ClCompile Include="..\..\..\..\Downloads\machiavelli\Socket.cpp" />
-    <ClCompile Include="..\..\..\..\Downloads\machiavelli\throw.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Socket.cpp" />
+    <ClCompile Include="throw.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
