Tried to make some changes in main and settup up clients

--- a/cpp2_machiavelli/cpp2_machiavelli.vcxproj
+++ b/cpp2_machiavelli/cpp2_machiavelli.vcxproj
@@ -127,7 +127,7 @@
     <ClInclude Include="GameState.h" />
     <ClInclude Include="InGameState.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="PlayerInputHandler.h" />
+    <ClInclude Include="ClientInputHandler.h" />
     <ClInclude Include="SetupState.h" />
     <ClInclude Include="Socket.h" />
     <ClInclude Include="Sync_queue.h" />
@@ -145,7 +145,7 @@
     <ClCompile Include="InGameState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="PlayerInputHandler.cpp" />
+    <ClCompile Include="ClientInputHandler.cpp" />
     <ClCompile Include="SetupState.cpp" />
     <ClCompile Include="Socket.cpp" />
     <ClCompile Include="throw.cpp" />
