Die kut vcxproj kutfile deed het weer niet -> gefixt nu

--- a/cpp2_machiavelli/cpp2_machiavelli.vcxproj
+++ b/cpp2_machiavelli/cpp2_machiavelli.vcxproj
@@ -130,7 +130,7 @@
     <ClInclude Include="GameState.h" />
     <ClInclude Include="InGameState.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="PlayerInputHandler.h" />
+    <ClInclude Include="ClientInputHandler.h" />
     <ClInclude Include="SetupState.h" />
     <ClInclude Include="Socket.h" />
     <ClInclude Include="Sync_queue.h" />
