--- a/cpp2_machiavelli/cpp2_machiavelli.vcxproj.filters
+++ b/cpp2_machiavelli/cpp2_machiavelli.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="ClientInputHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Server.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -122,5 +125,12 @@
     <ClCompile Include="ClientInputHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Server.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Bouwkaarten.csv" />
+    <None Include="karakterkaarten.csv" />
   </ItemGroup>
 </Project>
