Added superclass Card, changed << en >> stream operators for use with all kinds of cards. Changed architecutre a bit. Loaded charactercards and shuffled -> NOTE: camel case and snake case are being used inconsistenly apparantly

--- a/cpp2_machiavelli/cpp2_machiavelli.vcxproj.filters
+++ b/cpp2_machiavelli/cpp2_machiavelli.vcxproj.filters
@@ -72,7 +72,10 @@
     <ClInclude Include="EndState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ClientInputHandler.h">
+    <ClInclude Include="PlayerInputHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Card.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -122,5 +125,12 @@
     <ClCompile Include="ClientInputHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Card.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Bouwkaarten.csv" />
+    <None Include="karakterkaarten.csv" />
   </ItemGroup>
 </Project>
