--- a/cpp2_machiavelli/cpp2_machiavelli.vcxproj
+++ b/cpp2_machiavelli/cpp2_machiavelli.vcxproj
@@ -119,6 +119,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BuildingCard.h" />
+    <ClInclude Include="Card.h" />
     <ClInclude Include="CharacterCard.h" />
     <ClInclude Include="CircularBuffer.h" />
     <ClInclude Include="ClientCommand.h" />
@@ -139,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BuildingCard.cpp" />
+    <ClCompile Include="Card.cpp" />
     <ClCompile Include="CharacterCard.cpp" />
     <ClCompile Include="EndState.cpp" />
     <ClCompile Include="FileReader.cpp" />
