--- a/cpp2_machiavelli/cpp2_machiavelli.vcxproj
+++ b/cpp2_machiavelli/cpp2_machiavelli.vcxproj
@@ -124,17 +124,19 @@
     <ClInclude Include="CircularBuffer.h" />
     <ClInclude Include="ClientCommand.h" />
     <ClInclude Include="ClientInfo.h" />
-    <ClInclude Include="EndState.h" />
+    <ClInclude Include="GameEndState.h" />
     <ClInclude Include="FileReader.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameManager.h" />
-    <ClInclude Include="GameState.h" />
-    <ClInclude Include="InGameState.h" />
+    <ClInclude Include="PreGameState.h" />
+    <ClInclude Include="State.h" />
+    <ClInclude Include="GameRoundState.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="ClientInputHandler.h" />
     <ClInclude Include="Server.h" />
-    <ClInclude Include="SetupState.h" />
+    <ClInclude Include="SetupRoundState.h" />
     <ClInclude Include="Socket.h" />
+    <ClInclude Include="state_machine.h" />
     <ClInclude Include="Sync_queue.h" />
     <ClInclude Include="throw.h" />
     <ClInclude Include="Turn.h" />
@@ -143,17 +145,17 @@
     <ClCompile Include="BuildingCard.cpp" />
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="CharacterCard.cpp" />
-    <ClCompile Include="EndState.cpp" />
+    <ClCompile Include="GameEndState.cpp" />
     <ClCompile Include="FileReader.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameManager.cpp" />
-    <ClCompile Include="GameState.cpp" />
-    <ClCompile Include="InGameState.cpp" />
+    <ClCompile Include="GameRoundState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="ClientInputHandler.cpp" />
+    <ClCompile Include="PreGameState.cpp" />
     <ClCompile Include="Server.cpp" />
-    <ClCompile Include="SetupState.cpp" />
+    <ClCompile Include="SetupRoundState.cpp" />
     <ClCompile Include="Socket.cpp" />
     <ClCompile Include="throw.cpp" />
     <ClCompile Include="Turn.cpp" />
