renamed statemachine. Build safety in case player leaves mid match => game will go back to pre game

--- a/cpp2_machiavelli/cpp2_machiavelli.vcxproj
+++ b/cpp2_machiavelli/cpp2_machiavelli.vcxproj
@@ -136,7 +136,7 @@
     <ClInclude Include="Server.h" />
     <ClInclude Include="SetupRoundState.h" />
     <ClInclude Include="Socket.h" />
-    <ClInclude Include="state_machine.h" />
+    <ClInclude Include="StateMachine.h" />
     <ClInclude Include="Sync_queue.h" />
     <ClInclude Include="throw.h" />
     <ClInclude Include="Turn.h" />
