--- a/cpp2_machiavelli/cpp2_machiavelli.vcxproj.filters
+++ b/cpp2_machiavelli/cpp2_machiavelli.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="StateMachine.h">
       <Filter>Header Files\States</Filter>
     </ClInclude>
+    <ClInclude Include="CharacterManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -163,6 +166,9 @@
     </ClCompile>
     <ClCompile Include="FileReader.cpp">
       <Filter>Source Files\Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="CharacterManager.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
